--- a/app/src/main/res/layout/activity_exit.xml
+++ b/app/src/main/res/layout/activity_exit.xml
@@ -15,10 +15,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Thanks!"
         android:id="@+id/textView8"
-        android:layout_above="@+id/textView9"
+        android:textStyle="bold|italic"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="102dp"
-        android:textStyle="bold|italic" />
+        android:layout_marginTop="33dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,7 +26,21 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="We truly appreciate your time and value your feedback."
         android:id="@+id/textView9"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/textView8"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="56dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Feedback"
+        android:id="@+id/button7"
+        android:layout_below="@+id/textView9"
+        android:layout_marginTop="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/textView9"
+        android:textColor="#ffff"
+        android:background="@color/colorPrimary"
+        android:onClick="restart"/>
 
 </RelativeLayout>
